<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="checkout_pay">PAYER</string>
    <string name="home_welcome">Bienvenue\nchez</string>
    <string name="home_droidRestaurant">DroidRestaurant</string>
    <string name="home_imageDescription">Chef droid holding the golden spatula</string>
    <string name="home_starter">Entrées</string>
    <string name="home_mainCourse">Plats</string>
    <string name="home_dessert">Desserts</string>

    <string name="detail_minus">-</string>
    <string name="detail_plus">+</string>
    <string name="detail_total">SOUS TOTAL %s€</string>

    <string name="actionBar_imageDescription">cart image</string>

    <string name="itemCheckout_quantity">quantité: </string>
    <string name="itemCheckout_imageDescription">trash can</string>

    <string name="itemListPicture_imageDescription">meal picture</string>
    <string name="price">prix: </string>
    <string name="price_content">%s€</string>
    <string name="not_initialized">Not_Initialized</string>
</resources>