<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/greeter"
        android:layout_width="389dp"
        android:layout_height="266dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_chef"
            android:layout_width="144dp"
            android:layout_height="207dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.508"
            app:srcCompat="@drawable/android_chef_"
            android:contentDescription="@string/home_imageDescription" />

        <TextView
            android:id="@+id/headline2"
            android:layout_width="189dp"
            android:layout_height="31dp"
            android:fontFamily="casual"
            android:text="@string/home_droidRestaurant"
            android:textColor="#7A400A"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/image_chef"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headline1" />

        <TextView
            android:id="@+id/headline1"
            android:layout_width="194dp"
            android:layout_height="58dp"
            android:fontFamily="serif"
            android:text="@string/home_welcome"
            android:textAlignment="textEnd"
            android:textColor="#E18615"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_chef"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_starter"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:backgroundTint="#05F18902"
        android:text="@string/home_starter"
        android:textColor="#E18615"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button_main_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeter" />

    <Button
        android:id="@+id/button_main_course"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:text="@string/home_mainCourse"
        android:textColor="#E18615"
        android:textSize="34sp"
        android:backgroundTint="#05F18902"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeter" />

    <Button
        android:id="@+id/button_dessert"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:text="@string/home_dessert"
        android:textColor="#E18615"
        android:textSize="34sp"
        android:backgroundTint="#05F18902"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_course" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="2dp"
        android:background="#7A400A"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/button_main_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_starter" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="115dp"
        android:layout_height="2dp"
        android:background="#7A400A"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/button_dessert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_main_course" />

</androidx.constraintlayout.widget.ConstraintLayout>